<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register"
    android:background="@drawable/background">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="140dp"
        android:layout_marginRight="140dp"
        android:layout_marginStart="140dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/UnameRegis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:inputType="text"

            />

        <EditText
            android:id="@+id/EmailRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/e_mail"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:inputType="textEmailAddress"

            />

        <EditText
            android:id="@+id/PhoneRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/phone_number"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:inputType="textEmailAddress"
            tools:ignore="phone" />


        <EditText
            android:id="@+id/PasswordRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/password"
            android:textColorHint="@color/black"
            android:inputType="textPassword"

            />
        <EditText
            android:id="@+id/PasswordRepeatRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/repeat_password"
            android:textColorHint="@color/black"
            android:inputType="textPassword"

            />

        <TextView
            android:id="@+id/Forgot_passw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/by_creating_an_accoung_you_agree_to_our_terms_and_conditions_amp_privacy_policy"
            android:textColor="#FFFFFF"
            android:layout_gravity="center_horizontal"/>


        <Button
            android:id="@+id/RegisterButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/regiser"
            />

        <TextView
            android:id="@+id/AlreadyHaveAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/already_have_an_account"
            android:textColor="#FFFFFF"
            android:layout_gravity="center_horizontal"
            android:onClick="Login"/>


    </LinearLayout>




</RelativeLayout>




