<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:background="@drawable/background">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="120dp"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/logo"
        app:civ_border_color="#FF000000"
        app:civ_border_width="2dp" />

    <TextView
        android:id="@+id/Logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="124dp"
        android:layout_marginLeft="124dp"
        android:layout_marginTop="194dp"
        android:text="@string/thermo_sauna"
        android:textColor="#FFFFFF"
        android:textSize="35sp"
        app:fontFamily="@font/annie_use_your_telescope" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="140dp"
        android:layout_marginRight="140dp"
        android:layout_marginStart="140dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/UsernameLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:inputType="text"

            />

        <EditText
            android:id="@+id/PasswordLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/password"
            android:textColorHint="@color/black"
            android:inputType="textPassword" />



        <TextView
            android:id="@+id/Forgot_passw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/forget_your_password"
            android:textColor="#FFFFFF"
            android:onClick="forget"/>


    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="140dp"
        android:layout_marginLeft="140dp"
        android:layout_marginRight="140dp"
        android:layout_marginBottom="136dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/Login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login" />

        <Button
            android:id="@+id/Register_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/register"
            android:onClick="Register"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        android:layout_marginBottom="87dp"
        android:orientation="horizontal">

        <View
            android:layout_width="145dp"
            android:layout_height="2dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="2dp"
            android:background="@color/White"
            android:layout_marginEnd="2dp" />

        <TextView
            android:layout_width="wrap_content"
            android:textColor="@color/White"
            android:layout_height="wrap_content"
            android:text="@string/or" />

        <View
            android:layout_width="145dp"
            android:layout_height="2dp"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="10dp"
            android:background="@color/White"
            android:layout_marginStart="2dp" />


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        android:layout_marginBottom="40dp"
        android:orientation="horizontal">




        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/facebookicon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="60dp"
            android:src="@drawable/facebook_logo"
            app:civ_border_color="#FF000000"
            >

        </de.hdodenhof.circleimageview.CircleImageView>
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/twittericon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="35dp"
            android:layout_marginLeft="35dp"
            android:src="@drawable/twitter_logo"
            app:civ_border_color="#FF000000"
            >

        </de.hdodenhof.circleimageview.CircleImageView>



        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/googleicon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="35dp"
            android:layout_marginLeft="35dp"
            android:src="@drawable/google_logo"
            app:civ_border_color="#FF000000"
             >

        </de.hdodenhof.circleimageview.CircleImageView>


    </LinearLayout>


</RelativeLayout>




